// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures: when interchange extension identity templates duplicates multiple names in base interchange should have validation failure -> message 1`] = `"Interchange additions InterchangeName redeclares property DomainEntityIdentityTemplateName1 of base Interchange."`;

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures: when interchange extension identity templates duplicates multiple names in base interchange should have validation failure -> message 2`] = `"Interchange additions InterchangeName redeclares property DomainEntityIdentityTemplateName2 of base Interchange."`;

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures: when interchange extension identity templates duplicates multiple names in base interchange should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 11,
  "tokenText": "domain entity identity",
}
`;

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures: when interchange extension identity templates duplicates multiple names in base interchange should have validation failure -> sourceMap 2`] = `
Object {
  "column": 4,
  "line": 12,
  "tokenText": "domain entity identity",
}
`;

exports[`when validating interchange extension identity template duplicates names in base interchange should have validation failures: when validating interchange extension identity template duplicates names in base interchange should have validation failure -> message 1`] = `"Interchange additions InterchangeName redeclares property DomainEntityIdentityTemplateName of base Interchange."`;

exports[`when validating interchange extension identity template duplicates names in base interchange should have validation failures: when validating interchange extension identity template duplicates names in base interchange should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 10,
  "tokenText": "domain entity identity",
}
`;
